
  - Man page updates:

     -  Document suggested use of the Visual C/C++ /FC option to fix
        the ability to double-click on file names in compilation error
        messages.

     -  Document the need to use Clean() for any SideEffect() files that
        must be explicitly removed when their targets are removed.

     -  Explicitly document use of Node lists as input to Dependency().

From Gary Oberbrunner:

  - Document use of the GetBuildFailures() function in the User's Guide.

From Adam Simpkins:

  - Add man page text clarifying the behavior of AddPreAction() and
    AddPostAction() when called with multiple targets.

From Alexey Zezukin:

  - Fix incorrectly swapped man page descriptions of the --warn= options
    for duplicate-environment and missing-sconscript.



RELEASE 0.98.5 - Sat, 07 Jun 2008 08:20:35 -0700

  From Benoit Belley:

  - Fix the Intel C++ compiler ABI specification for EMT64 processors.

  From David Cournapeau:

  - Issue a (suppressable) warning, not an error, when trying to link
    C++ and Fortran object files into the same executable.

  From Steven Knight:

  - Update the scons.bat file so that it returns the real exit status
    from SCons, even though it uses setlocal + endlocal.

  - Fix the --interactive post-build messages so it doesn't get stuck
    mistakenly reporting failures after any individual build fails.

  - Fix calling File() as a File object method in some circumstances.

  - Fix setup.py installation on Mac OS X so SCons gets installed
    under /usr/lcoal by default, not in the Mac OS X Python framework.



RELEASE 0.98.4 - Sat, 17 May 2008 22:14:46 -0700

  From Benoit Belley:

  - Fix calculation of signatures for Python function actions with
    closures in Python versions before 2.5.

  From David Cournapeau:

  - Fix the initialization of $SHF77FLAGS so it includes $F77FLAGS.

  From Jonas Olsson:

  - Fix a syntax error in the Intel C compiler support on Windows.

  From Steven Knight:
